crates/tree-sitter-octave/corpus/control_flow.txt
================================================================================
If Statements
================================================================================

if true
end

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (identifier)))
