crates/tree-sitter-octave/corpus/variable_definitions.txt
================================================================================
Variable definition
================================================================================

a = 3

--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier)
    (number
      (integer))))

================================================================================
Variable definition with semicolon
================================================================================

a = 2;

--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier)
    (number
      (integer))))

================================================================================
variable definition with identifiers
================================================================================

hello = bye;

--------------------------------------------------------------------------------

(source_file
  (variable_definition
    (identifier)
    (identifier)))
